<resources>
    <string name="app_name">Tiled Image</string>
    <string name="image">Image</string>
    <string name="start">Start</string>
    <string name="newStr">New</string>
    <string name="visitor">Visitor</string>
    <string name="time">00:00</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Choose a photo</string>
    <string name="rules">Rules</string>
    <string name="recommend">Recommend</string>
    <string name="scores">Scores</string>
    <string name="about">About</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="win">You got it!</string>
    <string name="sendMsg">Checkout this cool App - http://www.richyan.com/android/ImageGame.apk</string>

    <string name="picture">Source Image:</string>
    <string name="buda">Buda</string>
    <string name="ziyi">Ziyi Zhang</string>
    <string name="mona">Mona Lisa</string>
    <string name="format">Tile Format:</string>
    <string name="three">3 x 3</string>
    <string name="four">4 x 4</string>
    <string name="hint">Show number on the tiled image</string>

    <string name="aboutGame">About Game</string>
    <string name="about1">1. Press Start button to start the game.</string>
    <string name="about2">2. Drag the last tiled image to white spot on the bottom right corner.</string>
    <string name="about3">3. Put those tiled images back to where they are.</string>
    <string name="designedBy">Designed By: Rich Yan</string>

    <string name="record">Record not found</string>
    <string name="player">Player: </string>
    <string name="complete">Completed time: </string>

    <string name="login">Log in</string>
</resources>
