<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_setting"
    android:title="@string/settings"
    android:icon="@mipmap/settings"
    app:titleTextColor="@color/colorWhite"
    app:showAsAction="ifRoom" />
<item   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_camera"
    android:title="@string/camera"
    android:icon="@mipmap/camera"
    app:showAsAction="ifRoom"
    />
<item android:id="@+id/action_photo"
    android:title="@string/photo" />
<item android:id="@+id/action_login"
    android:title="@string/login" />
<item
    android:id="@+id/action_recommend"
    android:title="@string/recommend"
    />
<item android:id="@+id/action_scores"
    android:title="@string/scores" />
<item android:id="@+id/action_about"
    android:title="@string/about" />

</menu>