<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/titleSize"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/picture"
    android:textSize="@dimen/titleSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    android:textColor="@color/colorWhite"/>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pictRG"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton android:id="@+id/budaRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buda"
        android:textColor="@color/colorPrimary"
      />
    <RadioButton android:id="@+id/ziyiRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ziyi"
        android:textColor="@color/colorPrimary"
       />
    <RadioButton
        android:id="@+id/monaRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mona"
        android:checked="true"
        android:textColor="@color/colorPrimary"
        />
</RadioGroup>

<TextView

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/format"
    android:textSize="@dimen/titleSize"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/colorPrimary"
    android:textColor="@color/colorWhite"
    android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/formatRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/threeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textColor="@color/colorPrimary"
           />
        <RadioButton android:id="@+id/fourRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:checked="true"
            android:textColor="@color/colorPrimary"
            />

    </RadioGroup>
<CheckBox
    android:id="@+id/numberCB"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/hint"
    android:textColor="@color/colorPrimary"
    android:checked="true"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    />
</LinearLayout>