<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.richyan.android.imagegame.GameActivity">
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
     android:theme="@style/AppTheme.Base"
     app:popupTheme="@style/GalaxyZooThemeToolbarDarkOverflow"
     >
 </android.support.v7.widget.Toolbar>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
 <ImageView
       android:id="@+id/image1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       />
    <ImageView
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />
    <ImageView
        android:id="@+id/image3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      />
    <ImageView
        android:id="@+id/image6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <ImageView
        android:id="@+id/image7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <ImageView
        android:id="@+id/image10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <ImageView
        android:id="@+id/image11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
    <ImageView
        android:id="@+id/image12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <ImageView
        android:id="@+id/image13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/image16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    <ImageView
        android:id="@+id/image17"
        android:layout_width="0dp"
        android:layout_height="0dp"
      />
    <ImageView
        android:id="@+id/image18"
        android:layout_width="0dp"
        android:layout_height="0dp"
       />
    <ImageView
        android:id="@+id/image19"
        android:layout_width="0dp"
        android:layout_height="0dp"
         />
    <ImageView
        android:id="@+id/image20"
        android:layout_width="0dp"
        android:layout_height="0dp"
         />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:focusable="true"
     android:orientation="horizontal"
     android:textAlignment="center"
     android:background="@color/colorWhite"
     android:focusableInTouchMode="true">
  <TextView
      android:id="@+id/nameTxt"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
      android:text="@string/visitor"
      android:textColor="@color/colorPrimary"
      android:layout_weight="0.3" />
  <EditText
      android:id="@+id/timeEtxt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/time"
      android:enabled="false"
      android:textColor="@color/colorPrimary"
      android:layout_weight="0.3" />
     <Button
         android:id="@+id/imgBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn"
         android:text="@string/image"
         android:textColor="@color/colorWhite"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:layout_weight="0.1" />
     <Button
         android:id="@+id/newBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start"
         android:background="@drawable/btn"
         android:textColor="@color/colorWhite"
         android:layout_weight="0.1" />
 </LinearLayout>
</RelativeLayout>
</LinearLayout>
